# annotation-tool

./: .env.example  .gitignore  CITATION.cff  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  todo.md
.github/workflows/: docs.yml
annotation-backend/: .coveragerc  README.md  api_tests.md  api_tests.py  codecov.yml  docker-compose.yml  fix_rename_tables.py  pytest.ini  requirements.txt  reset_db.sh
annotation-backend/alembic/: env.py
annotation-backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
annotation-backend/tests/: conftest.py  test_adjacency_pairs.py  test_adjacency_pairs_additional.py  test_adjacency_pairs_admin_exports.py  test_admin.py  test_admin_import_validation.py  test_admin_internal_errors.py  test_admin_project_lifecycle.py  test_annotations.py  test_annotations_errors.py  test_app_general.py  test_auth.py  test_auth_additional_coverage.py  test_auth_internal.py  test_config.py  test_crud_more.py  test_crud_utils.py  test_csv_utils_more.py  test_dependencies.py  test_dependencies_more.py  test_main_errors.py  test_projects.py  test_projects_access.py  test_projects_additional_coverage.py  test_projects_admin_branches.py  test_projects_exceptions.py  test_projects_more.py
annotation_ui/: .env.example  Dockerfile  README.md  nginx.conf  vite.config.js  vitest.config.js
annotation_ui/playwright/: sitemap-generator-optimized.spec.js  sitemap-generator.spec.js
conversion_tools/: README.md  config.yaml  config.yaml.example  import_excel.py
docs/: index.md
(+51 files in other folders)
