[project]
name = "annotation-tool"
version = "0.2.0"
description = "Full-stack annotation tool for chat disentanglement and adjacency-pairs annotation."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
